Adding configurator